[initial] 替换音乐按钮图片

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ dist
 test.*
 
 .Ds_Store
+.idea/SmallRomance.iml
+.idea/dbnavigator.xml
+.idea/inspectionProfiles/
+.idea/markdown-navigator/
+.idea/modules.xml
+.idea/workspace.xml
+yarn.lock
